--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -20,5 +20,13 @@
   <welcome-file-list>
     <welcome-file>Pennbook.html</welcome-file>
   </welcome-file-list>
+  <servlet>
+  	<servlet-name>ProfileService</servlet-name>
+  	<servlet-class>com.edu.pennbook.server.ProfileServiceImpl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ProfileService</servlet-name>
+  	<url-pattern>/pennbook/ProfileService</url-pattern>
+  </servlet-mapping>
 
 </web-app>
