--- a/.settings/com.google.gwt.eclipse.core.prefs
+++ b/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Sun Dec 04 14:24:26 EST 2011
+#Sun Dec 04 16:50:09 EST 2011
 eclipse.preferences.version=1
+entryPointModules=
 filesCopiedToWebInfLib=gwt-servlet.jar
