--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Sun Dec 04 14:24:26 EST 2011
+#Mon Dec 12 13:16:17 EST 2011
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=/Users/hawka/Documents/Folder/Academic/College/Junior Fall/212/Pennbook/war/WEB-INF/lib/mysql-connector-java-5.1.18-bin.jar|/Users/hawka/Documents/Folder/Academic/College/Junior Fall/212/Pennbook/mysql-connector-java-5.1.18-bin.jar
 warSrcDir=war
 warSrcDirIsOutput=true
